[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/sunOctopus.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/world.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/UI.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/background.png" type="Texture" id=6]

[node name="game" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="player" parent="." instance=ExtResource( 2 )]

position = Vector2( 512, 523.109 )
z = 1
_sections_unfolded = [ "Transform", "Z" ]

[node name="camera" type="Camera2D" parent="player"]

scale = Vector2( 1, 1 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Limit", "Transform" ]

[node name="sunOctopus" parent="." instance=ExtResource( 3 )]

position = Vector2( 512, 300 )
scale = Vector2( 2, 2 )
z = 1
_sections_unfolded = [ "Transform", "Z" ]

[node name="world" parent="." instance=ExtResource( 4 )]

[node name="UI" parent="." instance=ExtResource( 5 )]

[node name="reset_timer" type="Timer" parent="."]

pause_mode = 2
process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false
_sections_unfolded = [ "Pause" ]

[node name="background" type="Sprite" parent="."]

position = Vector2( 512, 655.055 )
scale = Vector2( 0.500515, 0.854274 )
z = -1
texture = ExtResource( 6 )
_sections_unfolded = [ "Region", "Transform", "Z" ]
__meta__ = {
"_edit_lock_": true
}

[connection signal="timeout" from="reset_timer" to="." method="_on_reset_timer_timeout"]


